# libtemp_file

./: .gitignore  CMakeLists.txt  README.md  delete_on_exit.cpp  delete_on_exit_test.cpp  glean.json  temp_file.cpp  temp_file_test.cpp  vcpkg.json
cmake/: FindFilesystem.cmake
include/: delete_on_exit.h  temp_file.h
include/daw/: temp_file.h
src/: delete_on_exit.cpp  temp_file.cpp
tests/: CMakeLists.txt  delete_on_exit_test.cpp  temp_file_test.cpp
tests/src/: temp_file_test.cpp
